Fixed line spacing, added shadow the button

--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ main {
 .create-button {
 
     background-color: darkcyan;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
     height: 55px;
     width: 270px;
     
@@ -178,6 +179,8 @@ main {
     color: white;
 
     margin-bottom: 20px;
+
+    
 
 }
 
